--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -94,7 +94,7 @@
         <string>Copyright © 2009-2014 The Bitcoin developers
 Copyright © 2012-2014 The NovaCoin developers
 Copyright © 2016 The GirlsToken developers
-Copyright © 2017 L8nit3tr0ubl3 - Wallet build</string>
+Copyright © 2017 L8nit3tr0ubl3 - XGTC 2.0</string>
        </property>
        <property name="textInteractionFlags">
         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
